[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "scalenav"
version = "0.0.5"

authors = [
  { name="Ivann Schlosser", email="ivann.schlosser@ouce.ox.ac.uk" },
]
maintainers = [
  { name="Ivann Schlosser", email="ivann.schlosser@ouce.ox.ac.uk" },
]

description = "A package to project all sorts of data on the H3 grid and manipulate it at different spatial scales."

readme = "README.md"

dependencies = [
    "numpy"
    ,"pandas"
    ,"pyarrow"
    ,"tqdm"
    ,"pypalettes"
    ,"rasterio"
    ,"shapely"
    ,"geopandas"
    ,'h3==4.0.0b3'
]

requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT License"}
keywords = ['hierarchical index','rescaling','geospatial']

[project.urls]
Homepage = "https://github.com/nismod/scale-nav"
Issues = "https://github.com/nismod/scale-nav/issues"
Documentation = "https://nismod.github.io/scale-nav/"

[project.scripts]
rastapar = "scalenav.rast_convert_par:rast_converter"

[project.gui-scripts]
rastapar = "scalenav.rast_convert_par:rast_converter"


[tool.flit.external-data]
directory = "data"